--- a/client/src/pages/inquiryPage/components/right.css
+++ b/client/src/pages/inquiryPage/components/right.css
@@ -23,23 +23,39 @@
   border-radius: 1rem;
 }
 
-.inquiry-right-table-chart-container {
+.inquiry-right-table-chart-container,
+.inquiry-right-table-chart-container-BloodTest,
+.inquiry-right-table-chart-container-Thymus {
   display: flex;
   flex-direction: row;
   justify-content: flex-end;
-  align-items: flex-end;
+  align-items: center;
   padding-right: 1rem;
   height: 4rem;
+  margin-top: 1rem;
+}
+
+.inquiry-right-table-chart-container p {
+  font-size: 1.5rem;
+  margin-right: 2.5rem;
+}
+
+.inquiry-right-table-chart-container-BloodTest p {
+  font-size: 1.5rem;
+  margin-right: 1rem;
+}
+.inquiry-right-table-chart-container-Thymus p {
+  font-size: 1.5rem;
+  margin-right: 1.3rem;
 }
 
 .inquiry-right-to-table-button {
-  width: fit-content;
   height: 2.3rem;
-  margin-right: 1rem;
+  margin-right: 0.3rem;
   font-size: 1rem;
   border-radius: 0.6rem;
   border: 0;
-  padding-inline: 1rem;
+  padding-inline: 0.5rem;
   cursor: pointer;
   background-color: white;
   outline: 0.15rem solid #61677a;
@@ -48,10 +64,18 @@
 
 .inquiry-right-to-table-button:hover {
   transform: translateY(-0.2rem);
+  background-color: #9e9fa5;
+  outline: 0.15rem solid #9e9fa5;
+  color: white;
+}
+
+.tableIcon {
+  cursor: pointer;
+  font-size: 1.6rem;
 }
 
 .inquiry-right-to-chart-button {
-  width: fit-content;
+  width: 4rem;
   height: 2.4rem;
   font-size: 0.95rem;
   cursor: pointer;
@@ -63,11 +87,11 @@
 }
 
 .inquiry-right-to-chart-button:hover {
-  transform: translateY(-0.25rem);
+  transform: translateY(-0.3rem);
 }
 
 .chartIcon {
-  color: "#67c6e3";
+  color: #61677a;
   cursor: pointer;
   font-size: 2.6rem;
 }
