--- a/client/src/pages/inquiryPage/table/ADL.css
+++ b/client/src/pages/inquiryPage/table/ADL.css
@@ -6,7 +6,6 @@
 .inquiry-table-ADL-bg {
   width: 100%;
   height: 95%;
-  margin-top: 1rem;
   margin-left: 1rem;
   background-color: rgb(255, 255, 255);
   border-radius: 1rem;
@@ -67,21 +66,21 @@
 .inquiry-table-ADL-content-row-breathing {
   display: flex;
   flex-direction: column;
-  margin-left: 3.8rem;
+  margin-left: 1.8rem;
 }
 
 .inquiry-table-ADL-content-row-brushTeethOrCombHair {
   display: flex;
   flex-direction: column;
-  margin-left: 3.8rem;
+  margin-left: 1.8rem;
+  margin-right: -2.5rem;
 }
 .inquiry-table-ADL-content-row-eyelid {
-  margin-left: 0.7rem;
+  margin-left: 0.5rem;
 }
 .inquiry-table-ADL-content-row-ariseFromChair {
   display: flex;
   flex-direction: column;
-  margin-left: 0.5rem;
 }
 .inquiry-table-ADL-content-row-sum {
   font-size: 1rem;
