--- a/client/src/pages/inquiryPage/table/BloodTest.css
+++ b/client/src/pages/inquiryPage/table/BloodTest.css
@@ -6,7 +6,6 @@
 .inquiry-table-BloodTest-bg {
   width: 100%;
   height: 95%;
-  margin-top: 1rem;
   margin-left: 1rem;
   background-color: rgb(255, 255, 255);
   border-radius: 1rem;
@@ -119,6 +118,7 @@
 
 .inquiry-table-BloodTest-content-row input:focus {
   outline: 0.15rem solid #7c7b7b;
+  cursor: text;
 }
 
 .inquiry-table-BloodTest-submit {
