--- a/client/src/pages/inquiryPage/table/MG.css
+++ b/client/src/pages/inquiryPage/table/MG.css
@@ -9,7 +9,6 @@ input[type="range"]::-webkit-slider-thumb {
 .inquiry-table-MG-bg {
   width: 100%;
   height: 95%;
-  margin-top: 1rem;
   margin-left: 1rem;
   background-color: rgb(255, 255, 255);
   border-radius: 1rem;
@@ -29,7 +28,7 @@ input[type="range"]::-webkit-slider-thumb {
   color: #b4b4b8;
 }
 .inquiry-table-MG-head {
-  height: 20vh;
+  height: 18vh;
   display: flex;
   justify-content: space-around;
   align-items: center;
@@ -41,7 +40,7 @@ input[type="range"]::-webkit-slider-thumb {
 }
 
 .inquiry-table-MG-content {
-  height: 45vh;
+  height: 48vh;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -75,9 +74,12 @@ input[type="range"]::-webkit-slider-thumb {
   margin-right: 0.5rem;
 }
 .inquiry-table-MG-content-row-hipFlexion {
-  margin-right: 21rem;
+  margin-right: 20rem;
 }
 
+.inquiry-table-MG-content-row-shoulderAbduction {
+  margin-right: -0.5rem;
+}
 .inquiry-table-MG-content-row-sum {
   font-size: 1rem;
   display: flex;
@@ -88,6 +90,7 @@ input[type="range"]::-webkit-slider-thumb {
 .inquiry-table-MG-content-row input[type="range"] {
   width: 16vw;
   margin: 0;
+  margin-top: 1rem;
 }
 
 .inquiry-table-MG-content-row-sum input {
@@ -129,7 +132,7 @@ input[type="range"]::-webkit-slider-thumb {
   height: 5vh;
   font-size: 1.3rem;
 }
-datalist {
+.MG-datalist {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
