--- a/client/src/pages/inquiryPage/table/Visit.css
+++ b/client/src/pages/inquiryPage/table/Visit.css
@@ -9,7 +9,6 @@ input[type="range"]::-webkit-slider-thumb {
 .inquiry-table-Visit-bg {
   width: 100%;
   height: 95%;
-  margin-top: 1rem;
   margin-left: 1rem;
   background-color: rgb(255, 255, 255);
   border-radius: 1rem;
@@ -36,10 +35,21 @@ input[type="range"]::-webkit-slider-thumb {
   font-size: 2rem;
 }
 
-.inquiry-table-Visit-head p {
-  margin-left: 8rem;
+.Visit-alert-input {
+  position: absolute;
+  top: 100%;
+  left: 0;
+  color: red;
+  font-size: 1.3rem;
 }
 
+.Visit-placeholder {
+  position: absolute;
+  top: 1.2rem;
+  right: 5rem;
+  color: rgb(81, 80, 80);
+  font-size: 1.2rem;
+}
 .inquiry-table-Visit-content {
   height: 45vh;
   display: flex;
@@ -47,6 +57,7 @@ input[type="range"]::-webkit-slider-thumb {
   align-items: center;
   overflow-y: auto;
 }
+
 .inquiry-table-Visit-content-row {
   width: 58vw;
   height: 20vh;
@@ -56,52 +67,72 @@ input[type="range"]::-webkit-slider-thumb {
   justify-content: space-evenly;
   margin-bottom: 3rem;
 }
+.inquiry-table-Visit-content-row:nth-of-type(2) {
+  margin-bottom: 2.2rem;
+}
+
 .inquiry-table-Visit-content-row input {
   background-color: #eeeeee;
   border: 0;
   border-radius: 0.7rem;
   padding: 0.3rem;
-  width: 14vw;
-  height: 10vh;
   margin-top: 0.2rem;
+  width: 14vw;
+  height: 5vh;
+}
+.inquiry-table-Visit-content-row-testdate,
+.inquiry-table-Visit-content-row-note,
+.inquiry-table-Visit-content-row-left,
+.inquiry-table-Visit-content-row-right,
+.inquiry-table-Visit-content-row-pyridostigmine,
+.inquiry-table-Visit-content-row-compesolone,
+.inquiry-table-Visit-content-row-cellcept,
+.inquiry-table-Visit-content-row-imuran,
+.inquiry-table-Visit-content-row-prograf,
+.inquiry-table-Visit-content-row-MGFAclassification {
+  display: flex;
+  flex-direction: column;
 }
 
-.inquiry-table-Visit-content-row-SBP,
+.inquiry-table-Visit-content-row-SBP {
+  display: flex;
+  flex-direction: column;
+  width: 20vw;
+  height: 16vh;
+  margin-left: 4rem;
+}
+
 .inquiry-table-Visit-content-row-DBP {
   display: flex;
   flex-direction: column;
   width: 20vw;
   height: 16vh;
 }
-.inquiry-table-Visit-content-row-SBP-head,
-.inquiry-table-Visit-content-row-DBP-head {
+
+.inquiry-table-Visit-content-row-MGFAclassification {
+  margin-right: 20rem;
+}
+
+.subTitle {
+  width: 58vw;
+  height: 10vh;
+  font-size: 2rem;
   display: flex;
-  align-items: center;
+  justify-content: center;
+  border-top: 0.15rem #eeeee8 solid;
+  margin-bottom: 1rem;
 }
-
-.inquiry-table-Visit-content-row-left,
-.inquiry-table-Visit-content-row-right {
-  display: flex;
-  flex-direction: column;
+.inquiry-table-Visit-content-row input[type="text"] {
+  font-size: 1.6rem;
 }
-.inquiry-table-Visit-content-row-single {
-  display: flex;
-  flex-direction: column;
-  align-items: left !important;
-
+.inquiry-table-Visit-content-row input[type="text"]:focus {
+  cursor: text;
 }
-
-.inquiry-table-Visit-content-row-ptosis {
-  margin-right: 0.5rem;
-}
-.inquiry-table-Visit-content-row-hipFlexion {
-  margin-right: 21rem;
-}
-
 
 .inquiry-table-Visit-content-row input[type="range"] {
   width: 16vw;
   margin: 0;
+  padding: 0;
 }
 
 .inquiry-table-Visit-content-row-sum input {
@@ -130,32 +161,16 @@ input[type="range"]::-webkit-slider-thumb {
   outline: 0.15rem solid #7c7b7b;
 }
 
-.inquiry-table-Visit-content-row input {
-  width: 10rem;
-  height: 2rem;
-}
-.inquiry-table-Visit-content-row-input-note {
-  width: 20rem !important;
-  height: 10rem !important;
-  border: 1px solid #ccc;
-  border-radius: 5px;
-  padding: 10px;
-  font-size: 16px;
-  resize: vertical;
-  box-sizing: border-box;
-  flex-direction: column;
-}
-
 .inquiry-table-Visit-content-row input:hover {
   cursor: pointer;
 }
 
 .inquiry-table-Visit-content-row input[type="date"] {
-  width: 16vw;
+  width: 14vw;
   height: 5vh;
   font-size: 1.3rem;
 }
-datalist {
+.Visit-datalist {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -165,6 +180,23 @@ datalist {
   font-size: 1.3rem;
 }
 
+#pyridostigmine,
+#compesolone,
+#cellcept,
+#imuran,
+#prograf {
+  width: 34vw;
+}
+
+.prescription-datalist {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  writing-mode: vertical-lr;
+  text-orientation: upright;
+  width: 34vw;
+  font-size: 1.3rem;
+}
 option {
   padding: 0;
 }
