--- a/client/src/pages/inquiryPage/components/menu.css
+++ b/client/src/pages/inquiryPage/components/menu.css
@@ -126,3 +126,54 @@
 .inquiry-menu-button:nth-child(4):hover {
   background-color: #ce0000;
 }
+.predictDialog {
+  .MuiPaper-root {
+    border-radius: 1rem;
+    width: 80vw;
+    height: 79vh;
+    padding-top: 2vh;
+    padding-bottom: 1vh;
+    padding-left: 5vh;
+    padding-right: 5vh;
+    margin-top: 12vh;
+  }
+
+  .MuiDialog-paper {
+    max-width: 100vw;
+  }
+  .MuiSvgIcon-root {
+    fill: white;
+    font-size: 2.5rem;
+  }
+
+  .MuiSvgIcon-root:hover {
+    background-color: transparent;
+    fill: rgba(41, 71, 118, 0.976);
+  }
+
+  button {
+    border-radius: 0.9rem;
+    background-color: #40a2d8;
+    font-size: 1.1rem;
+    padding-inline: 1.3rem;
+    box-shadow: 0;
+    transition: 0;
+  }
+  button:hover {
+    background-color: aliceblue;
+    color: #40a2d8;
+    box-shadow: 0;
+    transition: 0;
+  }
+}
+
+.predictDialog-content {
+  display: flex;
+  flex-direction: column;
+}
+
+.row-for-confirm {
+  display: flex;
+  flex-direction: row;
+  margin-bottom: 22vh;
+}
