--- a/client/src/pages/inquiryPage/components/menu.css
+++ b/client/src/pages/inquiryPage/components/menu.css
@@ -129,17 +129,22 @@
 .predictDialog {
   .MuiPaper-root {
     border-radius: 1rem;
-    width: 80vw;
-    height: 79vh;
+    width: 86vw;
+    height: 82vh;
     padding-top: 2vh;
     padding-bottom: 1vh;
     padding-left: 5vh;
     padding-right: 5vh;
-    margin-top: 12vh;
+    margin-top: 14vh;
   }
 
   .MuiDialog-paper {
     max-width: 100vw;
+    overflow: hidden;
+  }
+  .MuiDialogContent-root {
+    overflow: hidden;
+    padding-top: 2vh;
   }
   .MuiSvgIcon-root {
     fill: white;
@@ -175,5 +180,5 @@
 .row-for-confirm {
   display: flex;
   flex-direction: row;
-  margin-bottom: 22vh;
+  margin-bottom: 15vh;
 }
