--- a/client/src/pages/inquiryPage/table/Thymus.css
+++ b/client/src/pages/inquiryPage/table/Thymus.css
@@ -38,17 +38,19 @@
 .inquiry-table-Thymus-content {
   height: 50vh;
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   align-items: center;
 }
 
 .inquiry-table-Thymus-content-row {
-  width: 60vw;
-  height: 22vh;
+  width: 50%;
+  height: 100%;
   font-size: 1.6rem;
   display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  flex-wrap: nowrap;
   align-items: center;
-  justify-content: space-evenly;
 }
 
 .inquiry-table-Thymus-content-row-head {
@@ -61,9 +63,15 @@
   display: flex;
   flex-direction: column;
 }
-
-.inquiry-table-Thymus-content-row-thymusDescription {
-  margin-right: 22rem;
+.inquiry-table-Thymus-content-row-thymusStatus {
+  width: 50%;
+  height: 100%;
+  font-size: 1.6rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: flex-start;
+  margin-top: 6rem;
 }
 .inquiry-table-Thymus-content-row input[type="date"] {
   font-size: 1.2rem;
@@ -75,9 +83,15 @@
 .inquiry-table-Thymus-content-row input[type="text"] {
   font-size: 1.7rem;
   align-items: center;
+  margin-top: 1rem;
 }
 .inquiry-table-Thymus-content-row input[type="text"]:focus {
   cursor: text;
+}
+.inquiry-table-Thymus-content-row-thymusStatus input[type="radio"] {
+  height: 3vh;
+  width: 3vw;
+  margin-top: 4vh;
 }
 
 .inquiry-table-Thymus-content-row input {
