--- a/client/src/pages/inquiryPage/components/AI.css
+++ b/client/src/pages/inquiryPage/components/AI.css
@@ -1,4 +1,4 @@
-.predictDialog {
+.AIDialog {
   .MuiPaper-root {
     border-radius: 1rem;
     width: 86vw;
@@ -15,24 +15,24 @@
     overflow: hidden;
   }
   .MuiDialogContent-root {
-    overflow: hidden;
-    padding-top: 2vh;
-  }
-  .MuiSvgIcon-root {
-    fill: white;
-    font-size: 2.5rem;
+    overflow: auto;
+    margin-top: 1rem;
   }
 
-  .MuiSvgIcon-root:hover {
+  svg {
+    color: white;
+    font-size: 4rem;
+  }
+  svg:hover {
     background-color: transparent;
-    fill: rgba(41, 71, 118, 0.976);
+    color: rgba(41, 71, 118, 0.976);
   }
 
   button {
     border-radius: 0.9rem;
     background-color: #40a2d8;
     font-size: 1.1rem;
-    padding-inline: 1.3rem;
+
     box-shadow: 0;
     transition: 0;
   }
@@ -44,50 +44,51 @@
   }
 }
 
-.predictDialog-content {
+.AI-panel-option {
   display: flex;
-  flex-direction: column;
-}
+  justify-content: center;
 
-.row-of-confirm-panel {
-  display: flex;
-  flex-direction: row;
-  margin-bottom: 15vh;
-}
-
-.readLable {
-  width: 20vw;
-  height: 18vh;
-  margin-right: 1vw;
-
-  .MuiSvgIcon-root {
-    fill: rgb(102, 105, 105);
+  .css-1c35hjw-MuiPaper-root-MuiAccordion-root.Mui-expanded:last-of-type {
+    margin-bottom: 0.2rem;
   }
 
   .MuiPaper-root {
-    width: 14vw;
+    width: 55vw;
     height: fit-content;
     margin-top: 0;
     padding-left: 4vh;
     padding-right: 4vh;
     padding-top: 1vh;
+    overflow: auto;
+    margin-bottom: 0.2rem;
   }
   .MuiPaper-root:hover {
     border: 0.15rem solid rgb(121, 189, 248);
   }
 
-  .MuiCollapse-root {
-    width: 15vw;
+  .MuiSvgIcon-root {
+    fill: rgb(102, 105, 105);
+    font-size: 2.5rem;
   }
   .MuiCollapse-wrapperInner {
-    width: 14vw;
     overflow: auto;
-    height: 20vh;
+    height: 50vh;
   }
-  .MuiTypography-root {
-    font-size: 1.1rem;
-  }
-  .MuiAccordionSummary-root.Mui-expanded:focus {
-    border-bottom: 0.15rem solid #eeeeee;
-  }
+}
+
+.AI-panel-img-area {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.AI-panel-img {
+  width: 30vw;
+  height: 35vh;
+  background-color: #eeeeee;
+  border-radius: 0.8rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 2rem;
 }
