--- a/client/src/pages/inquiryPage/chart/Chart.css
+++ b/client/src/pages/inquiryPage/chart/Chart.css
@@ -34,6 +34,16 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  flex-direction: row;
+}
+.chart-footer-chart {
+  width: 90%;
+}
+.chart-footer-checkbox {
+  width: 10%;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
 }
 
 .chart-backToRight {
