--- a/client/src/pages/inquiryPage/chart/Chart.css
+++ b/client/src/pages/inquiryPage/chart/Chart.css
@@ -41,8 +41,9 @@
 }
 
 .chart-footer-checkbox {
-  height: 100%;
+  height: 85%;
   overflow: auto;
+  box-sizing: border-box;
 }
 .chart-footer-checkbox-inner {
   display: flex;
