--- a/client/src/pages/inquiryPage/table/Visit.css
+++ b/client/src/pages/inquiryPage/table/Visit.css
@@ -65,10 +65,10 @@ input[type="range"]::-webkit-slider-thumb {
   display: flex;
   align-items: center;
   justify-content: space-evenly;
-  margin-bottom: 3rem;
+  margin-bottom: 2rem;
 }
 .inquiry-table-Visit-content-row:nth-of-type(2) {
-  margin-bottom: 2.2rem;
+  margin-bottom: 2rem;
 }
 
 .inquiry-table-Visit-content-row input {
@@ -98,7 +98,7 @@ input[type="range"]::-webkit-slider-thumb {
   display: flex;
   flex-direction: column;
   width: 20vw;
-  height: 16vh;
+  height: 12vh;
   margin-left: 4rem;
 }
 
@@ -106,7 +106,8 @@ input[type="range"]::-webkit-slider-thumb {
   display: flex;
   flex-direction: column;
   width: 20vw;
-  height: 16vh;
+  height: 12vh;
+  margin-left: 4rem;
 }
 
 .inquiry-table-Visit-content-row-MGFAclassification {
