--- a/client/src/pages/inquiryPage/components/menu.css
+++ b/client/src/pages/inquiryPage/components/menu.css
@@ -3,7 +3,7 @@
   flex-direction: row;
   justify-content: space-between;
   width: 100vw;
-  margin: 0 1rem 0 1rem;
+  margin: 0 3rem 0 3rem;
 }
 
 .inquiry-menu-left {
@@ -31,57 +31,11 @@
   justify-content: center;
   margin: 2vw;
   font-size: 2rem;
+  padding-bottom: 0.25rem;
   cursor: default;
 }
 
-.inquiry-menu-button:nth-child(1) {
-  background-color: white;
-  color: #6c3428;
-  width: 7rem;
-  height: 2.6rem;
-  border-radius: 0.9rem;
-  font-weight: bold;
-  border: none;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  margin: 0.5vw;
-  font-size: 1rem;
-  font-family: "Helvetica", sans-serif;
-  transition: 0.3s;
-  cursor: pointer;
-}
-
-.inquiry-menu-button:nth-child(1):hover {
-  background-color: white;
-  outline: 0.15rem solid #6c3428;
-  transition: 0.2s;
-}
-
 .inquiry-menu-button:nth-child(2) {
-  width: 12rem;
-  height: 2.6rem;
-  background-color: #ffa41b;
-  border-radius: 0.9rem;
-  font-weight: bold;
-  border: none;
-  color: white;
-  display: flex;
-  text-align: center;
-  align-items: center;
-  justify-content: center;
-  margin: 0.5vw;
-  font-size: 1rem;
-  font-family: "Helvetica", sans-serif;
-  cursor: pointer;
-  transition: 0.3s;
-}
-
-.inquiry-menu-button:nth-child(2):hover {
-  background-color: #ff8911;
-}
-
-.inquiry-menu-button:nth-child(3) {
   width: 7rem;
   height: 2.6rem;
   background-color: #103074;
@@ -100,11 +54,11 @@
   transition: 0.3s;
 }
 
-.inquiry-menu-button:nth-child(3):hover {
+.inquiry-menu-button:nth-child(2):hover {
   background-color: #0c359e;
 }
 
-.inquiry-menu-button:nth-child(4) {
+.inquiry-menu-button:nth-child(3) {
   width: 7rem;
   height: 2.6rem;
   background-color: #e74646;
@@ -123,30 +77,21 @@
   transition: 0.3s;
 }
 
-.inquiry-menu-button:nth-child(4):hover {
+.inquiry-menu-button:nth-child(3):hover {
   background-color: #ce0000;
 }
 
-.inquiry-menu-right-testdate {
-  width: 100%;
-  height: 100%;
-  display: flex;
-  align-items: center;
-  flex-direction: row;
-  justify-content: flex-end;
-  font-size: 1.4rem;
-}
-
-.inquiry-menu-right-testdate input[type="date"] {
-  width: 10rem;
+.inquiry-menu-input {
+  width: 11rem;
   height: 2.6rem;
-  font-size: 1rem;
+  font-size: 1.25rem;
   border-radius: 0.9rem;
   box-sizing: border-box;
   border: 0;
   background-color: rgb(255, 255, 255);
   margin: 0 0.5vw 0 0.5vw;
+  padding-left: 0.75rem;
 }
-.inquiry-menu-right-testdate input:focus {
+.inquiry-menu-input:focus {
   outline: 0.15rem solid #7c7b7b;
 }
