--- a/client/src/pages/inquiryPage/components/left.css
+++ b/client/src/pages/inquiryPage/components/left.css
@@ -25,7 +25,7 @@
   height: 15%;
   display: flex;
   align-items: center;
-  justify-content: center;
+  justify-content: flex-end;
   font-size: 1.6rem;
 }
 
@@ -38,6 +38,9 @@
   overflow: auto;
   overflow-x: hidden;
   padding-top: 0.5rem;
+}
+.inquiry-components-left-footer::-webkit-scrollbar {
+  width: 0px;
 }
 .inquiry-components-left-footer-basicdata {
   display: flex;
@@ -78,6 +81,18 @@
   color: white;
   font-size: 1.2rem;
   border: 0;
-  margin-bottom: 1rem;
-  margin-left: 10rem;
+}
+
+.inquiry-components-edit-button {
+  height: 2.3rem;
+  margin-right: 1.3rem;
+  font-size: 1rem;
+  border-radius: 0.6rem;
+  border: 0;
+  padding-inline: 0.5rem;
+  cursor: pointer;
+  background-color: white;
+  outline: 0.15rem solid #61677a;
+  color: #61677a;
+  margin-left: 5rem;
 }
