--- a/client/src/pages/inquiryPage/table/Visit.css
+++ b/client/src/pages/inquiryPage/table/Visit.css
@@ -80,6 +80,14 @@ input[type="range"]::-webkit-slider-thumb {
   width: 14vw;
   height: 5vh;
 }
+
+.inquiry-table-Visit-content-row input[type="radio"] {
+  height: 3.5vh;
+}
+
+.visit-radio-label {
+  font-size: 1.3rem;
+}
 .inquiry-table-Visit-content-row-testDate,
 .inquiry-table-Visit-content-row-left,
 .inquiry-table-Visit-content-row-right,
@@ -107,6 +115,23 @@ input[type="range"]::-webkit-slider-thumb {
   flex-direction: column;
   width: 20vw;
   height: 12vh;
+}
+
+.examination .inquiry-table-Visit-content-row {
+  height: 4.8vh;
+  display: flex;
+  justify-content: space-between;
+  margin-left: 6rem;
+  margin-top: 2vh;
+}
+.radio {
+  display: flex;
+  width: 42vw;
+}
+
+.radio-yes,
+.radio-no {
+  display: flex;
 }
 
 .inquiry-table-Visit-content-row-MGFAclassification {
