inquiryTable head位置一樣，加匯出按鈕

--- a/client/src/pages/inquiryPage/table/ADL.css
+++ b/client/src/pages/inquiryPage/table/ADL.css
@@ -18,7 +18,6 @@
   background-color: white;
   font-size: 3.7rem;
   color: #c7c8cc;
-  margin-left: -5rem;
 }
 .ADL-backToRight:hover {
   cursor: pointer;
@@ -27,15 +26,21 @@
 .inquiry-table-ADL-head {
   height: 20vh;
   display: flex;
-  justify-content: space-around;
+  justify-content: center;
   align-items: center;
   font-size: 2rem;
 }
 
-.inquiry-table-ADL-head p {
-  margin-left: 8rem;
+.inquiry-table-ADL-return {
+  width: 14vw;
+  display: flex;
+  justify-content: center;
 }
-
+.inquiry-table-ADL-head-title {
+  width: 40vw;
+  display: flex;
+  justify-content: center;
+}
 .inquiry-table-ADL-content {
   height: 65vh;
   display: flex;
@@ -79,6 +84,7 @@
   flex-direction: column;
 }
 .inquiry-table-ADL-content-row-sum {
+  width: 14vw;
   font-size: 1rem;
   display: flex;
   flex-direction: row;
