--- a/client/src/pages/inquiryPage/components/left.css
+++ b/client/src/pages/inquiryPage/components/left.css
@@ -25,10 +25,22 @@
   height: 15%;
   display: flex;
   align-items: center;
-  justify-content: flex-end;
+  justify-content: center;
   font-size: 1.6rem;
 }
 
+.inquiry-components-left-space {
+  width: 5vw;
+}
+.inquiry-components-left-title {
+  width: 14.5vw;
+  display: flex;
+  justify-content: center;
+}
+
+.inquiry-components-left-button {
+  width: 5vw;
+}
 .inquiry-components-left-footer {
   width: 100%;
   height: 79%;
@@ -94,5 +106,12 @@
   background-color: white;
   outline: 0.15rem solid #61677a;
   color: #61677a;
-  margin-left: 5rem;
+}
+
+.inquiry-components-edit-button:hover {
+  cursor: pointer;
+  transform: translateY(-0.2rem);
+  background-color: #9e9fa5;
+  outline: 0.15rem solid #9e9fa5;
+  color: white;
 }
