後台管理搜尋完成

--- a/client/src/pages/inquiryPage/table/EMG.css
+++ b/client/src/pages/inquiryPage/table/EMG.css
@@ -25,7 +25,10 @@
 .inquiry-table-EMG-return {
   width: 14vw;
   display: flex;
+  flex-direction: row;
   justify-content: center;
+  align-items: center;
+  padding-top: 1rem;
 }
 
 .EMG-backToRight {
