--- a/client/src/pages/inquiryPage/table/MG.css
+++ b/client/src/pages/inquiryPage/table/MG.css
@@ -16,23 +16,12 @@ input[type="range"]::-webkit-slider-thumb {
   flex-direction: column;
 }
 
-.inquiry-table-MG-return {
-  width: 14vw;
-  display: flex;
-  justify-content: center;
-}
-
-.inquiry-table-MG-head-title {
-  width: 40vw;
-  display: flex;
-  justify-content: center;
-}
-
 .MG-backToRight {
   border: 0;
   background-color: white;
   font-size: 3.7rem;
   color: #c7c8cc;
+  margin-left: -5rem;
 }
 .MG-backToRight:hover {
   cursor: pointer;
@@ -44,6 +33,10 @@ input[type="range"]::-webkit-slider-thumb {
   justify-content: space-around;
   align-items: center;
   font-size: 2rem;
+}
+
+.inquiry-table-MG-head p {
+  margin-left: 8rem;
 }
 
 .inquiry-table-MG-content {
@@ -98,7 +91,6 @@ input[type="range"]::-webkit-slider-thumb {
   width: 16vw;
 }
 .inquiry-table-MG-content-row-sum {
-  width: 14vw;
   font-size: 1rem;
   display: flex;
   flex-direction: row;
