--- a/client/src/pages/inquiryPage/chart/Chart.css
+++ b/client/src/pages/inquiryPage/chart/Chart.css
@@ -30,17 +30,18 @@
 }
 .chart-footer {
   width: 100%;
-  height: 75%;
+  height: 85%;
   display: flex;
-  align-items: center;
   justify-content: center;
   flex-direction: row;
+  align-items: center;
 }
 .chart-footer-chart {
   width: 77%;
 }
 
 .chart-footer-checkbox {
+  width: 100%;
   height: 85%;
   overflow: auto;
   box-sizing: border-box;
