把忘記密碼拿掉

--- a/client/src/pages/loginPage/LoginPage.css
+++ b/client/src/pages/loginPage/LoginPage.css
@@ -39,7 +39,7 @@
 .loginboxbottom {
   width: 100%;
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   align-items: center;
 }
 
