--- a/client/src/pages/inquiryPage/components/left.css
+++ b/client/src/pages/inquiryPage/components/left.css
@@ -56,17 +56,40 @@
 }
 .inquiry-components-left-footer-basicdata {
   display: flex;
+  flex-direction: row;
+  width: 100%;
+  /* display: flex;
   align-items: flex-end;
   flex-direction: column;
   gap: 2rem;
   box-sizing: border-box;
   font-size: 1.2rem;
   letter-spacing: 0.5rem;
+  margin: 0 0 2rem 0; */
+}
+.inquiry-components-left-footer-basicdata-left {
+  width: 50%;
+  display: flex;
+  align-items: flex-end;
+  flex-direction: column;
+  gap: 3rem;
+  box-sizing: border-box;
+  font-size: 1.2rem;
+  letter-spacing: 0.5rem;
   margin: 0 0 2rem 0;
 }
-
+.inquiry-components-left-footer-basicdata-right {
+  width: 50%;
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
+  box-sizing: border-box;
+  font-size: 1.2rem;
+  margin: 0 0 2rem 0;
+  align-items: flex-start;
+}
 .textfield {
-  width: 8vw;
+  width: 10vw;
   height: 3.5vh;
   border-radius: 5px;
   background-color: rgb(240, 240, 240);
