結束看診修改資料

--- a/client/src/pages/inquiryPage/components/menu.css
+++ b/client/src/pages/inquiryPage/components/menu.css
@@ -61,7 +61,7 @@
 .inquiry-menu-button:nth-child(3) {
   width: 7rem;
   height: 2.6rem;
-  background-color: #e74646;
+  background-color: grey;
   border-radius: 0.9rem;
   font-weight: bold;
   border: none;
