--- a/client/src/pages/inquiryPage/components/left.css
+++ b/client/src/pages/inquiryPage/components/left.css
@@ -56,8 +56,9 @@
 }
 .inquiry-components-left-footer-basicdata {
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   width: 100%;
+  gap: 3vh;
   /* display: flex;
   align-items: flex-end;
   flex-direction: column;
@@ -67,29 +68,31 @@
   letter-spacing: 0.5rem;
   margin: 0 0 2rem 0; */
 }
-.inquiry-components-left-footer-basicdata-left {
-  width: 50%;
+.inquiry-components-left-footer-basicdata-context {
+  width: 100%;
   display: flex;
-  align-items: flex-end;
-  flex-direction: column;
-  gap: 3rem;
-  box-sizing: border-box;
-  font-size: 1.2rem;
-  letter-spacing: 0.5rem;
-  margin: 0 0 2rem 0;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
 }
-.inquiry-components-left-footer-basicdata-right {
+.inquiry-components-left-footer-basicdata-context-left {
   width: 50%;
-  display: flex;
-  flex-direction: column;
-  gap: 2rem;
-  box-sizing: border-box;
   font-size: 1.2rem;
-  margin: 0 0 2rem 0;
-  align-items: flex-start;
+  box-sizing: border-box;
+  display: flex;
+  flex-direction: row-reverse;
+  letter-spacing: 0.5vw;
+}
+
+.inquiry-components-left-footer-basicdata-context-right {
+  width: 50%;
+  padding-left: 0.5vw;
+  box-sizing: border-box;
+  display: flex;
+  align-items: center;
 }
 .textfield {
-  width: 10vw;
+  width: 9vw;
   height: 3.5vh;
   border-radius: 5px;
   background-color: rgb(240, 240, 240);
