--- a/client/src/pages/inquiryPage/chart/Chart.css
+++ b/client/src/pages/inquiryPage/chart/Chart.css
@@ -1,17 +1,22 @@
 .chart-bg {
-  width: 100%;
-  height: 100%;
+  width: 65.5vw;
+  height: 86vh;
   display: flex;
   justify-content: center;
 }
 
 .chart {
-  width: 95%;
-  height: 95%;
+  width: 97%;
+  height: 97%;
   background-color: white;
-  border-radius: 20px;
+  border-radius: 1.8rem;
   border: 10px solid white;
   box-sizing: border-box;
+  margin-left: 5.2vw;
+}
+
+.css-25q7vw-MuiResponsiveChart-container > svg {
+  margin-left: 6vw;
 }
 .chart-header {
   width: 100%;
@@ -65,6 +70,7 @@
   flex-direction: column;
   font-size: 2vh;
   gap: 2vh;
+  margin-left: 4vw;
 }
 
 .chart-footer-checkbox input[type="checkbox"] {
