--- a/client/src/pages/inquiryPage/chart/Thymus.css
+++ b/client/src/pages/inquiryPage/chart/Thymus.css
@@ -1,15 +1,16 @@
 .thymus-chart-bg {
-  width: 100%;
-  height: 100%;
+  width: 65vw;
+  height: 86vh;
   display: flex;
   justify-content: center;
 }
 
 .thymus-chart {
-  width: 95%;
-  height: 95%;
+  width: 97%;
+  height: 97%;
   background-color: white;
-  border-radius: 20px;
+  border-radius: 1.8rem;
+  margin-left: 5.2vw;
 }
 .thymus-chart-header {
   width: 100%;
