--- a/client/src/pages/inquiryPage/inquiryPage.css
+++ b/client/src/pages/inquiryPage/inquiryPage.css
@@ -10,7 +10,7 @@
   display: flex;
   flex-direction: row;
   justify-content: space-around;
-  height: 15vh;
+  height: 13vh;
   width: 100vw;
 }
 
@@ -22,8 +22,12 @@
 }
 
 .inquiry-left {
-  height: 85vh;
-  width: 30vw;
+  height: 83.5vh;
+  width: 31vw;
+}
+
+.inquiry-components-left-bg {
+  height: 105%;
 }
 
 .inquiry-right {
