--- a/client/src/pages/inquiryPage/table/BloodTest.css
+++ b/client/src/pages/inquiryPage/table/BloodTest.css
@@ -1,16 +1,17 @@
 .inquiry-table-BloodTest-all {
-  width: 68vw;
-  height: 85vh;
+  width: 62vw;
+  height: 86vh;
   display: flex;
 }
 .inquiry-table-BloodTest-bg {
-  width: 100%;
-  height: 95%;
+  width: 97%;
+  height: 97%;
   margin-left: 1rem;
   background-color: rgb(255, 255, 255);
-  border-radius: 1rem;
+  border-radius: 1.8rem;
   display: flex;
   flex-direction: column;
+  margin-left: 5.2vw;
 }
 
 .BloodTest-backToRight {
@@ -55,10 +56,10 @@
   flex-direction: column;
   align-items: center;
   justify-content: space-around;
-  margin-left: 4rem;
+  margin-left: 5.7rem;
 }
 .inquiry-table-BloodTest-content-row {
-  width: 58vw;
+  width: 50vw;
   height: 12vh;
   font-size: 1.5rem;
   display: flex;
@@ -136,15 +137,15 @@
 }
 
 .inquiry-table-BloodTest-submit {
-  height: 15vh;
+  height: 12vh;
   display: flex;
   justify-content: flex-end;
-  align-items: center;
+  align-items: flex-start;
   margin-right: 4rem;
 }
 .inquiry-table-BloodTest-submit button {
   width: 10vw;
-  height: 5vh;
+  height: 6vh;
   background-color: #cae7f8;
   color: #0c537b;
   font-size: 1.3rem;
