--- a/client/src/pages/inquiryPage/table/EMG.css
+++ b/client/src/pages/inquiryPage/table/EMG.css
@@ -1,17 +1,18 @@
 .inquiry-table-EMG-all {
-  width: 68vw;
-  height: 85vh;
+  width: 62vw;
+  height: 86vh;
   display: flex;
 }
 
 .inquiry-table-EMG-head-content {
-  width: 100%;
-  height: 95%;
+  width: 97%;
+  height: 97%;
   margin-left: 1rem;
   background-color: rgb(255, 255, 255);
-  border-radius: 1rem;
+  border-radius: 1.8rem;
   display: flex;
   flex-direction: column;
+  margin-left: 5.2vw;
 }
 
 .inquiry-table-EMG-head {
@@ -68,7 +69,7 @@
   justify-content: center;
   align-items: flex-start;
   padding-top: 2rem;
-  padding-left: 3rem;
+  padding-left: 0.5rem;
   overflow: auto;
 }
 .inquiry-table-EMG-content-right {
@@ -90,7 +91,7 @@
 .inquiry-table-EMG-content-right-submit {
   display: flex;
   flex-direction: row;
-  height: 12vh;
+  height: 17vh;
   justify-content: flex-end;
   align-items: center;
 }
@@ -103,7 +104,7 @@
   cursor: text;
 }
 #result {
-  width: 25vw;
+  width: 24.5vw;
   height: 20vh;
   font-size: 1.3rem;
   background-color: #eeeeee;
@@ -134,6 +135,7 @@
   font-weight: bold;
   border-radius: 1.2rem;
   border: 0;
+  cursor: pointer;
 }
 #submitButton:hover {
   background-color: white;
