--- a/client/src/pages/inquiryPage/table/QMG.css
+++ b/client/src/pages/inquiryPage/table/QMG.css
@@ -7,20 +7,21 @@
 }
 
 .inquiry-table-QMG-bg {
-  width: 100%;
+  width: 90%;
   height: 100%;
   display: flex;
   align-items: flex-start;
   justify-content: center;
 }
 .inquiry-table-QMG {
+  width: 97%;
+  height: 98%;
+  margin-left: 1rem;
+  background-color: rgb(255, 255, 255);
+  border-radius: 1.8rem;
+  display: flex;
   flex-direction: column;
-  height: 95%;
-  width: 95%;
-  background-color: white;
-  border-radius: 20px;
-  overflow-y: auto;
-  box-sizing: border-box;
+  margin-left: 8vw;
 }
 
 .inquiry-table-QMG-head {
@@ -113,7 +114,7 @@
 .inquiry-table-QMG-content-block-right {
   width: 100%;
   height: 100%;
-  margin: 0 4rem 0;
+  margin: 0 2rem 0;
 }
 
 .inquiry-table-QMG-content-block-right :nth-child(1) {
@@ -126,7 +127,7 @@
 }
 
 input .QMQ-datalist {
-  width: 17vw;
+  width: 16vw;
 }
 .inquiry-table-QMG-content-block-textfield {
   width: 16vw;
@@ -177,7 +178,7 @@ input .QMQ-datalist {
 }
 .inquiry-table-QMG-submit button {
   width: 10vw;
-  height: 5vh;
+  height: 6vh;
   background-color: #cae7f8;
   color: #0c537b;
   font-size: 1.3rem;
