--- a/client/src/pages/inquiryPage/table/Visit.css
+++ b/client/src/pages/inquiryPage/table/Visit.css
@@ -2,18 +2,19 @@ input[type="range"]::-webkit-slider-thumb {
   border: 12px solid black;
 }
 .inquiry-table-Visit-all {
-  width: 68vw;
-  height: 85vh;
+  width: 62vw;
+  height: 86vh;
   display: flex;
 }
 .inquiry-table-Visit-bg {
-  width: 100%;
-  height: 95%;
+  width: 97%;
+  height: 97%;
   margin-left: 1rem;
   background-color: rgb(255, 255, 255);
-  border-radius: 1rem;
+  border-radius: 1.8rem;
   display: flex;
   flex-direction: column;
+  margin-left: 5.2vw;
 }
 
 .Visit-backToRight {
@@ -64,7 +65,7 @@ input[type="range"]::-webkit-slider-thumb {
   font-size: 1.2rem;
 }
 .inquiry-table-Visit-content {
-  height: 45vh;
+  height: 63vh;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -87,7 +88,7 @@ input[type="range"]::-webkit-slider-thumb {
 }
 
 .inquiry-table-Visit-content-row {
-  width: 58vw;
+  width: 52vw;
   height: 20vh;
   font-size: 1.6rem;
   display: flex;
@@ -99,6 +100,9 @@ input[type="range"]::-webkit-slider-thumb {
   margin-bottom: 2rem;
 }
 
+.inquiry-table-Visit-content-row:nth-of-type(3) {
+  margin-left: 2vw;
+}
 .inquiry-table-Visit-content-row input {
   background-color: #eeeeee;
   border: 0;
@@ -132,19 +136,21 @@ input[type="range"]::-webkit-slider-thumb {
   display: flex;
   flex-direction: column;
   height: 12vh;
+  margin-bottom: 3vh;
 }
 
 .inquiry-table-Visit-content-row-note {
   display: flex;
   flex-direction: column;
   height: 12vh;
-  margin-left: 1vw;
+  margin-left: 2vw;
 }
 
 .inquiry-table-Visit-content-row-DBP {
   display: flex;
   flex-direction: column;
   height: 12vh;
+  margin-bottom: 3vh;
 }
 
 .examination .inquiry-table-Visit-content-row {
@@ -154,9 +160,10 @@ input[type="range"]::-webkit-slider-thumb {
   margin-left: 6rem;
   margin-top: 2vh;
 }
+
 .radio {
   display: flex;
-  width: 42vw;
+  width: 38vw;
 }
 
 .radio-yes,
@@ -169,7 +176,7 @@ input[type="range"]::-webkit-slider-thumb {
   flex-direction: column;
   width: 16vw;
   height: 12vh;
-  margin-left: 1vw;
+  margin-left: 2vw;
 }
 
 .inquiry-table-Visit-content-row-MGFAclassification select {
@@ -280,7 +287,7 @@ option {
 }
 
 .inquiry-table-Visit-submit {
-  height: 15vh;
+  height: 13vh;
   display: flex;
   justify-content: flex-end;
   align-items: center;
@@ -288,7 +295,7 @@ option {
 }
 .inquiry-table-Visit-submit button {
   width: 10vw;
-  height: 5vh;
+  height: 6vh;
   background-color: #cae7f8;
   color: #0c537b;
   font-size: 1.3rem;
